--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.6.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>MayoServicioPrueba</artifactId>
+	<groupId>com.idat</groupId>
+	<artifactId>MayoServicioPrueba_v2</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>MayoServicioPrueba</name>
+	<name>MayoServicioPrueba_v2</name>
 	<description>Microservicio Producto</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
