--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.jpa.show-sql: true
 
 spring.security.user.name=profesor
 spring.security.user.password=12345
+
+jwt.secret=queridoprofesor123
